--- a/main.html
+++ b/main.html
@@ -12,27 +12,27 @@
 
 <section class="hero">
     <div class="background-image"></div>
-    <h1>Welcome to Our Site</h1>
+    <h1>Responsive Flexbox Template</h1>
 </section>
 
 <section class="our-work">
-    <h2 class="title">Our Work</h2>
+    <h2 class="title">Some of our work</h2>
     <div class="work-gallery">
         <!-- Images go here -->
     </div>
 </section>
 
 <section class="features">
-    <h2 class="title">Features & Services</h2>
+    <h2 class="title">Features and services</h2>
     <!-- Content goes here -->
 </section>
 
 <section class="reviews">
-    <h2 class="title">Customer Reviews</h2>
+    <h2 class="title">What others say:</h2>
     <!-- Reviews go here -->
 </section>
 
 <section class="contact">
-    <h2 class="title">Join Our Newsletter</h2>
+    <h2 class="title">Join our newsletter</h2>
     <!-- Contact form or newsletter signup goes here -->
 </section>
