--- a/main.html
+++ b/main.html
@@ -17,22 +17,36 @@
 
 <section class="our-work">
     <h2 class="title">Some of our work</h2>
-    <div class="work-gallery">
-        <!-- Images go here -->
-    </div>
+    <ul class="grid">
+        <li><img src="work1.jpg" alt="Work 1"></li>
+        <li><img src="work2.jpg" alt="Work 2"></li>
+        <li><img src="work3.jpg" alt="Work 3"></li>
+        <li><img src="work4.jpg" alt="Work 4"></li>
+    </ul>
 </section>
 
 <section class="features">
     <h2 class="title">Features and services</h2>
-    <!-- Content goes here -->
+    <ul class="grid">
+        <li>Feature 1</li>
+        <li>Feature 2</li>
+        <li>Feature 3</li>
+        <li>Feature 4</li>
+    </ul>
 </section>
 
 <section class="reviews">
     <h2 class="title">What others say:</h2>
-    <!-- Reviews go here -->
+    <p class="quote">"This is a great service!"</p>
+    <p class="quote">"Highly recommended!"</p>
+    <p class="quote">"Outstanding experience!"</p>
 </section>
 
 <section class="contact">
     <h2 class="title">Join our newsletter</h2>
-    <!-- Contact form or newsletter signup goes here -->
+    <form id="contactForm">
+        <input type="email" id="email" placeholder="Your email">
+        <input type="submit" value="Subscribe">
+    </form>
 </section>
+
