--- a/main.html
+++ b/main.html
@@ -1,5 +1,7 @@
 <header>
-    <img src="logo.png" alt="Website Logo">
+    <a id="logo" href="#">
+        <img src="logo.png" alt="Website Logo">
+    </a>
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -9,6 +11,7 @@
         </ul>
     </nav>
 </header>
+
 
 <section class="hero">
     <div class="background-image"></div>
@@ -31,22 +34,22 @@
         <li>Feature 1</li>
         <li>Feature 2</li>
         <li>Feature 3</li>
-        <li>Feature 4</li>
     </ul>
 </section>
 
 <section class="reviews">
     <h2 class="title">What others say:</h2>
-    <p class="quote">"This is a great service!"</p>
-    <p class="quote">"Highly recommended!"</p>
-    <p class="quote">"Outstanding experience!"</p>
+    <p class="author">"This is a great service!"</p>
+    <p class="author">"Highly recommended!"</p>
+    <p class="author">"Outstanding experience!"</p>
 </section>
 
 <section class="contact">
     <h2 class="title">Join our newsletter</h2>
     <form id="contactForm">
         <input type="email" id="email" placeholder="Your email">
-        <input type="submit" value="Subscribe">
+        <input type="submit" value="Subscribe" class="btn">
     </form>
 </section>
+
 
