--- a/main.html
+++ b/main.html
@@ -39,16 +39,16 @@
 
 <section class="reviews">
     <h2 class="title">What others say:</h2>
-    <p class="author">"This is a great service!"</p>
-    <p class="author">"Highly recommended!"</p>
-    <p class="author">"Outstanding experience!"</p>
+    <p class="quote">"This is a great service!"</p>
+    <p class="quote">"Highly recommended!"</p>
+    <p class="quote">"Outstanding experience!"</p>
 </section>
 
 <section class="contact">
     <h2 class="title">Join our newsletter</h2>
     <form id="contactForm">
         <input type="email" id="email" placeholder="Your email">
-        <input type="submit" value="Subscribe" class="btn">
+        <input type="submit" value="Subscribe now" class="btn">
     </form>
 </section>
 
